# mnemonic_validator

./: Cargo.toml  Readme.md
input/: mnemonics.txt
output/: valid_mnemonics.txt
src/: main.rs
