[package]
name = "mnemonic_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.0.0" # Or the latest
memmap2 = "0.9.0" # Or the latest
rayon = "1.9.0"   # Or the latest
ctrlc = "3.2.5"   # Or the latest
clap = { version = "4.4.18", features = ["derive"] } # Or the latest
dirs = "5.0.1" # Or the latest
tokio = { version = "1.0", features = ["rt", "time"] } # Add this
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
crossbeam-channel = "0.5"  # For thread-safe message passing
